--- a/static/form.html
+++ b/static/form.html
@@ -10,9 +10,9 @@
     <div>
         <form method="post" action="/form">
             <label>Name</label>
-            <input name="nane" type="text" value=""><input/>
+            <input name="name" type="text" value="">
             <label>Address</label>
-            <input name="address" type="text" value=""><input/>
+            <input name="address" type="text" value="">
             
             <button type="submit" value="submit">Submit</button>
         </form>
